--- a/publishing/css/parallax-slider/parallax-slider.css
+++ b/publishing/css/parallax-slider/parallax-slider.css
@@ -1,7 +1,7 @@
 .da-slider{
 	width: 100%;
 	height: 550px;
-	min-width: 520px;
+	/* min-width: 520px; */
 	position: relative;
 	margin: 0 auto;
 	overflow: hidden;
