--- a/publishing/css/index.css
+++ b/publishing/css/index.css
@@ -4,7 +4,9 @@
 
 .da-slide-font1{
 	font-size: 80px;
-    
+}
+.da-slide-font-common{
+    font-style: normal;
 }
 
 #slide-img1{
@@ -24,6 +26,19 @@
     width: 600px;
     height: 280px;
 }
+/* Seconds info container */
+.property-title{
+    font-size: 18px;
+    color: #666666;
+}
+.property-title-box{
+    margin-bottom: 8px;
+}
+.property-dec{
+    margin-left: 30px;
+    margin-bottom: 20px;
+    color: #666666;
+}
 
 #contact-h1{
     font-size: 30px;
@@ -37,7 +52,8 @@
 
 .contact-box{
     border: 1px solid #6eb12c;
-    height: 268px;
+    min-height: 276.56px;
+    height: 350px;
     /* padding-left: 80px; */
 }
 
@@ -45,6 +61,7 @@
 
 .col-lg-6 h3{
     font-size: 17px;
+    margin-top: 30px;
 }
 
 .col-lg-6 h3 a{
@@ -95,6 +112,29 @@
 .panel-body-custom{
     border: 0px;
 }
+.help-icon1{
+    background: #76b042;
+}
+.help-more-box{
+    padding-bottom: 20px;
+}
+.help-icon-area1{
+    margin-left: 5px;
+}
+.help-icon-area2{
+    /* margin-left: 10px; */
+}
+.help-icon-area3{
+    margin-right: 3px;
+}
+.help-subtitle{
+    color: #6eb12c;
+}
+
+.news-more-btn{
+    text-align: right;
+}
+
 
 
 @media (max-width:1200px){
@@ -115,22 +155,44 @@
         /* padding-left: 90px !important; */
     }
     .col-lg-6 h3 a{
-        font-size: 20px;
+        font-size: 25px;
     }
     .contact-num{
         /* padding-left: 40px; */
     }
+
+    .news-box{
+        height: 500px;
+    }
+
+    
     
 }
+
 @media(max-width:480px){
-    #contact-box{
-        /* padding-left: 30px !important; */
+    .news-box{
+        height: 600px;
     }
     .col-lg-6 h3 a{
-        font-size: 20px !important;
+        font-size: 21px !important;
+    }
+}
+
+@media(max-width:360px){
+    .news-box{
+        height: 670px;
     }
     .col-lg-6 h3 a{
-        font-size: 18px !important;
+        font-size: 15px !important;
+    }
+}
+
+@media(max-width:280px){
+    .news-box{
+        height: 750px;
+    }
+    .col-lg-6 h3 a{
+        font-size: 15px !important;
     }
 }
 
