--- a/publishing/css/style.css
+++ b/publishing/css/style.css
@@ -1208,7 +1208,7 @@ ul.tag li a {
 }
 /*footer*/
 .footer {
-    background: #34495e;
+    background: #343a39;
     color: #fff;
     padding: 50px 0;
     display: inline-block;
@@ -1289,7 +1289,9 @@ ul.tag li a {
 }
 .copyright {
     color: #fff;
-    padding-top: 15px;
+    padding-top: 23px;
+    display: flex;
+    align-items: center;
 }
 .page-footer { padding: 0% 13% }
 .page-footer h1 { padding-left: 4% }
@@ -1304,9 +1306,10 @@ ul.page-footer-list li {
 ul.page-footer-list a { color: #fff }
 ul.page-footer-list li i { padding-right: 10px }
 .footer-small {
-    background-color: #2C3E50;
+    background-color: #f37020;
     margin-top: -6px;
     padding-top: 5px;
+    min-height: 110px;
 }
 .text-footer {
     padding-left: 10px;
