--- a/publishing/css/Detail-Academy.css
+++ b/publishing/css/Detail-Academy.css
@@ -1,4 +1,4 @@
-.hcc-people-table-title1{
+.table-title1{
     text-align: center;
     font-size: 30px;
     margin-top: 30px;
@@ -7,7 +7,14 @@
     font-weight: 500;
     color: #3C3D3F;
 }
-.hcc-people-table-sub1{
+.table-title2{
+    text-align: center;
+    font-size: 20px;
+    font-family: 'NanumSquare', sans-serif !important;
+    font-weight: 600;
+    color: #3C3D3F;
+}
+.table-sub1{
     text-align: right;
     font-size: 15px;
     color: #707070;
@@ -25,16 +32,27 @@
     text-align: center;
     font-family: 'NanumSquare', sans-serif !important;
     font-weight: 400;
-    height: 51px;
+    height: 80px;
     vertical-align: inherit !important;
     background-color: #76B042;
     color: #FFFFFF;
     
 }
 
-.hcc-table-set1 tr td:nth-child(1){
+.dtl-fonts-color-set1{
     color: #76B042;
 }
+.dtl-table-back1{
+    color: #76B042;
+    background-color: rgba(118,176,66,0.1);
+}
+.dtl-table-back2{
+    font-size: 20px;
+    font-weight: 600;
+    color: #76B042;
+    background-color: rgba(118,176,66,0.1);
+}
+
 
 .hcc-people-bottom{
     margin-bottom: 100px;
@@ -49,4 +67,27 @@
     border-bottom: 2px solid #76B042 !important;
 }
 
+/* Row셋팅 */
+.table tr {
+    text-align: center !important;
+    height: 70px;
+}
+.table > tbody > tr > td {
+    vertical-align: middle;
+}
+/* 요양보호사교육기간 컬럼 Widhth */
+.table1-col-set1{
+    width: 50% !important;
+}
+.table1-col-set2{
+    width: 10% !important;
+}
+
+/* border Set */
+.table-border-b{
+    border-bottom: 2px solid #76B042 !important;
+}
+.table-border-r{
+    border-right: 2px solid #76B042 !important;
+}
 
