--- a/publishing/css/Online-Counsulting.css
+++ b/publishing/css/Online-Counsulting.css
@@ -1,13 +1,18 @@
 
 /* 소개글 CSS */
 .counsulting-p-set1{
-    font-size: 20px;
+    font-size: 25px;
+    padding: 3px;
     text-align: center;
     color: #76B042;
 }
 .main-box{
     border: 1px solid #666666 ;
     height: 30px;
+    border-radius: 5px;
+    height: 450px;
+}
+.main-box2{
     border-radius: 5px;
     height: 450px;
 }
@@ -18,7 +23,7 @@
     margin-bottom: 20px;
     text-align: center;
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 25px;
     padding: 10px;
     
 }
@@ -59,7 +64,7 @@
 
 .consult-table-set1 tr td:nth-child(1){
     color: #333333;
-    width: 20%;
+    width: 14%;
     text-align: center !important;
 }
 
@@ -105,14 +110,17 @@
 .consult-info-box-table table tr td{
     padding: 5px;
 }
+.consult-info-box-table table tr td:nth-child(1){
+    font-weight: 200 ;
+}
 /* 연락처 셋팅 */
 .consult-contents-box p{
-    
     text-align: left;
     color: #76B042;
 }
 
 .info-number-box{
+    padding-left: 20px;
     margin-top: 15px;
     width: 80%;
 }
