--- a/publishing/css/Introduce-Card-Foreigner.css
+++ b/publishing/css/Introduce-Card-Foreigner.css
@@ -176,6 +176,15 @@ body{
     display: none;
 }
 
+.common-desc2{
+    margin-top: 30px;
+}
+.caution{
+    color: #ea7070;
+}
+.page-end-set{
+    margin-bottom: 60px;
+}
 
 @media (max-width:1200px){
     .process-box{
