--- a/publishing/css/index.css
+++ b/publishing/css/index.css
@@ -1,15 +1,60 @@
+
+/* 상단 배너 */
+.top-banner{
+    
+}
+.popup-small{
+    display: none;
+} 
+.popup-small2{
+    display: none;
+}
+.head-section{
+    top: 0;
+    position: sticky;
+    z-index: 10000;
+    background-color: #FFFFFF;
+}
 .header-popup{
-    background-color: #76b042;
-    height: 150px;
-    font-size: 50px;
+    background-color: #f37020;
+    min-height: 110px;
     text-align: center;
     position: sticky;
     top: 0;
+    z-index: 10000;
 }
+.popup-close{
+    font-size: 40px;
+    color: #FFFFFF;
+    margin-top: 10px;
+    margin-left: auto;
+}
+.top-popup-btn{
+    background-color: #f37020 !important;
+    color: #FFFFFF !important;
+    border-radius: 30px;
+    padding: 10px 33px;
+    margin-left: 120px;
+    margin-top: 10px;
+}
+.top-popup-btn a{
+    color: #FFFFFF !important;
+}
+.popup-wide{
+    display: flex;
+}
+.copyright-detail-fonts{
+    font-size: 25px;
+    padding-left: 80px;
+    padding-top: 17px;
+    font-weight: 700;
+}
+/* 상단 배너 */
+
 
 .footer-btn-detail a{
     color: #FFFFFF;
-}ㅠ
+}
 .navbar-brand img{
     width: 250px;
 }
@@ -171,12 +216,7 @@
     margin-bottom: 5px !important;
 }
 
-.copyright-detail-fonts{
-    font-size: 25px;
-    margin-left: 30px;
-    padding-top: 17px;
-    font-weight: 700;
-}
+
 .footer-btn-detail{
     background-color: #f37020 !important;
     color: #FFFFFF !important;
@@ -192,6 +232,17 @@
     height: 70px;
     margin-top: 50px;
 }
+/* footer2 */
+.footer2{
+    background-color: #343a39;
+    color: #FFFFFF;
+}
+.view-tenth img{
+    width: 100% !important;
+    height: 100% !important;
+    width: 250px !important;
+    height: 200px !important;
+}
 
 @media (max-width:1200px){
     #contact-box{
@@ -203,25 +254,73 @@
     .col-lg-6 h3 a{
         font-size: 30px;
     }
+    .popup-wide{
+        display: none;
+    }
+    .popup-small{
+        display: block;
+    }
+    .copyright-detail-fonts{
+        font-size: 30px !important;
+        padding-top: 17px;
+        font-weight: 700;
+        margin-left: 30px;
+    }
+    .popup-small{
+        min-height: 170px;
+    }
+    .small-popup-btn{
+        margin-top: 10px;
+        margin-right: 60px;
+    }
+    .small-popup-close{
+        margin-right: 40px;
+    }
+    .footer-img-set1{
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    .footer{
+        display: none;
+    }
+    .address p {
+        text-align: center !important;
+    }
 }
 
 
 @media (max-width: 768px) {
-    #contact-box{
-        /* padding-left: 90px !important; */
-    }
     .col-lg-6 h3 a{
         font-size: 25px;
-    }
-    .contact-num{
-        /* padding-left: 40px; */
     }
 
     .news-box{
         height: 500px;
     }
-
-    
+    .footer-img-set2{
+        width: 262.5px;
+        height: 52.5px;
+        margin-top: 50px;
+    }
+    .popup-small{
+        display: none;
+    }
+    .popup-small2{
+        display: block;
+    }
+    .top-banner-box div{
+        font-size: 30px !important;
+    }
+    .small-popup-btn{
+        margin-right: 139px;
+    }
+    .small-popup-close2{
+        position: absolute;
+        right: 50px;
+    }
+    .top-banner-box{
+        justify-content: space-around;
+    }
     
 }
 
@@ -232,6 +331,25 @@
     .col-lg-6 h3 a{
         font-size: 21px !important;
     }
+    .popup-wide{
+        display: block;
+    }
+    .popup-small2{
+        display: none;
+    }
+    .copyright-detail-fonts{
+        display: none;
+    }
+    .top-popup-btn {
+        margin-left: auto;
+    }
+    .header-popup{
+        min-height: 30px;
+    }
+    .copyright{
+        padding-top: 0;
+    }
+    
 }
 
 @media(max-width:360px){
@@ -241,6 +359,7 @@
     .col-lg-6 h3 a{
         font-size: 15px !important;
     }
+    
 }
 
 @media(max-width:280px){
