--- a/publishing/css/Introduce-Card-Foreigner.css
+++ b/publishing/css/Introduce-Card-Foreigner.css
@@ -15,6 +15,9 @@
     font-family: 'NanumSquareR';
     src: url('../fonts/NanumSquareR.ttf') format('truetype');
 }
+.breadcrumbs{
+    margin-bottom: 0px;
+}
 .topmenu-set li a{
     color: #ffffff !important;
 }
@@ -27,16 +30,9 @@ body{
     margin-bottom: 100px;
 }
 
-.main-title-p p{
-    padding: 20px;
-    text-align: center;
-    font-size: 25px;
-    font-weight: 700;
-    color: #76b042 ;
-}
 /* Contents1 */
 .contents1{
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 .dtl-contents1-box2{
     text-align: center;
@@ -57,10 +53,10 @@ body{
 
 }
 .dtl-contents1-box1 p{
-    margin-top: 40px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 25px;
-    font-weight: 300;
+    font-weight: 700;
     color: #76b042 ;
 }
 
@@ -76,7 +72,7 @@ body{
 
 /* Contents2 */
 .contents2{
-    margin-bottom: 30px;
+    margin-top: 40px;
     position: relative !important;
 }
 .contents2 img{
@@ -102,19 +98,21 @@ body{
     color: #ffffff;
 }
 .common-contents-box{
-    margin-top: 60px;
-    margin-bottom: 30px;
+    /* margin-top: 60px;
+    margin-bottom: 30px; */
 }
 
 .common-title p{
+    margin-top: 60px;
+    margin-bottom: 60px;
     text-align: center;
     font-size: 25px;
     font-weight: 700;
     color: #76b042 ;
 }
 .common-title2 p{
-    margin-top: 50px;
-    padding-bottom: 10px;
+    margin-top: 60px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 20px;
     font-weight: 700;
@@ -170,14 +168,14 @@ body{
 }
 .caution-desc{
     margin-top: 30px;
-    margin-bottom: 80px;
+    margin-bottom: 60px;
 }
 .response-font2{
     display: none;
 }
 
 .common-desc2{
-    margin-top: 30px;
+    margin-top: 20px;
 }
 .caution{
     color: #ea7070;
@@ -218,6 +216,12 @@ body{
     }
 }
 
+@media (max-width: 992px) {
+    .contents2{
+        display: none;
+    }
+    
+}
 
 @media (max-width: 768px) {
     
