--- a/publishing/css/Introduce-Card-Local.css
+++ b/publishing/css/Introduce-Card-Local.css
@@ -15,6 +15,9 @@
     font-family: 'NanumSquareR';
     src: url('../fonts/NanumSquareR.ttf') format('truetype');
 }
+.breadcrumbs{
+    margin-bottom: 0px;
+}
 .topmenu-set li a{
     color: #ffffff !important;
 }
@@ -28,7 +31,9 @@ body{
 }
 
 .main-title-p p{
-    padding: 20px;
+    /* padding: 20px; */
+    margin-top: 60px;
+    margin-bottom: 60px;
     text-align: center;
     font-size: 25px;
     font-weight: 700;
@@ -36,7 +41,7 @@ body{
 }
 /* Contents1 */
 .contents1{
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
 }
 .dtl-contents1-box2{
     text-align: center;
@@ -57,10 +62,10 @@ body{
 
 }
 .dtl-contents1-box1 p{
-    margin-top: 40px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 25px;
-    font-weight: 300;
+    font-weight: 700;
     color: #76b042 ;
 }
 
@@ -76,7 +81,7 @@ body{
 
 /* Contents2 */
 .contents2{
-    margin-bottom: 30px;
+    margin-top: 40px;
     position: relative !important;
 }
 .contents2 img{
@@ -102,19 +107,20 @@ body{
     color: #ffffff;
 }
 .common-contents-box{
-    margin-top: 60px;
-    margin-bottom: 30px;
+    /* margin-top: 60px;
+    margin-bottom: 30px; */
 }
 
 .common-title p{
+    margin-top: 60px;
+    margin-bottom: 60px;
     text-align: center;
     font-size: 25px;
     font-weight: 700;
     color: #76b042 ;
 }
 .common-title2 p{
-    margin-top: 50px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 20px;
     font-weight: 700;
@@ -125,6 +131,9 @@ body{
     font-size: 15px;
     color: #666666 ;
 }
+.desc-title-distance{
+    margin-top: 40px;
+}
 
 /* 신청절차 */
 /* 온라인상담 정보표시 */
@@ -133,6 +142,7 @@ body{
     min-height: 150px;
     border-radius: 5px;
     min-width: 200px;
+    height: 180px;
 }
 .process-box-title{
     background-color: #76B042;
@@ -160,7 +170,7 @@ body{
 .process-box-desc{
     font-weight: 300;
     padding-top: 15px;
-    font-size: 11px;
+    font-size: 14px;
     color: #76B042;
 
 }
@@ -169,8 +179,8 @@ body{
     padding-bottom: 5px;
 }
 .caution-desc{
-    margin-top: 30px;
-    margin-bottom: 80px;
+    margin-top: 20px;
+    margin-bottom: 60px;
 }
 .response-font2{
     display: none;
@@ -207,6 +217,13 @@ body{
         text-align: center;
         padding-left: 0px;
     }
+}
+
+@media (max-width: 992px) {
+    .contents2{
+        display: none;
+    }
+    
 }
 
 
