--- a/publishing/css/Detail-Bath.css
+++ b/publishing/css/Detail-Bath.css
@@ -24,9 +24,8 @@ body{
 }
 .detail-table-title1{
     text-align: center;
-    font-size: 30px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    font-size: 25px;
+    margin-top: 20px;
     font-family: 'NanumSquare', sans-serif !important;
     font-weight: 500;
     color: #3C3D3F;
@@ -41,7 +40,7 @@ body{
     text-align: center;
     font-family: 'NanumSquare', sans-serif !important;
     font-weight: 400;
-    font-size: 18px;
+    font-size: 14px;
     border: 1px solid #76B042 !important;
 
 }
@@ -85,10 +84,11 @@ body{
 
 /* 소개글 CSS */
 .main-title-p{
-    padding: 40px;
+    
+    /* padding: 40px; */
 }
 .main-title-p p{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
     color: #76B042;
     text-align: center !important;
@@ -97,12 +97,34 @@ body{
     margin-bottom: 6px;
 }
 .dtl-contents-box{
-    font-size: 20px;
+    margin-top: 40px;
+    font-size: 17px;
     text-align: center !important;
 }
 
 .contents1{
-    margin-bottom: 30px;
+    margin-top: 80px;
+}
+
+
+.breadcrumbs {
+    margin-bottom: 0px;
+}
+
+
+.table-line{
+    display: flex;
+    justify-content: center;
+}
+.table-line div{
+    border: 2px solid #76B042;
+    text-align: center;
+    width: 50px;
+    margin-top: 80px;
+}
+
+.table-end-set{
+    margin-bottom: 80px;
 }
 
 
