--- a/src/main/resources/templates/page/login.html
+++ b/src/main/resources/templates/page/login.html
@@ -1,4 +1,20 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/layout}">
+
+<th:block layout:fragment="content">
+    <p>Contents</p>
+    <p>Contents</p>
+    <p>Contents</p>
+    <p>Contents</p>
+    <p>Contents</p>
+    <p>Contents</p>
+    <p>Contents</p>
+</th:block>
+</html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
