--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -146,7 +146,7 @@
         margin-bottom: 50px;
     }
     .footer{
-        display: none;
+        display: none !important;
     }
     .footer2{
         display: block;
