--- a/src/main/resources/templates/layout/fragments/FooterTest.html
+++ b/src/main/resources/templates/layout/fragments/FooterTest.html
@@ -11,14 +11,14 @@
                     <div class="col-lg-5 col-sm-3 address wow fadeInUp footer-fonts" data-wow-duration="2s" data-wow-delay=".1s">
                         <p class="footer-set1">이용약관 ㅣ 개인정보처리방침 </p>
                         <p class="footer-set2">경기도 안산시 단원구 고잔로 102, 6층 드림요양보호사교육원</p>
-                        <p class="footer-set2">M. 010·2446·9271 </p>
+                        <p class="footer-set2">M. 010·9271·0191 </p>
                         <p class="footer-set2">T. 031·505·0191 </p>
                         <p>E. dreamedu019@naver.com</p>
                         <p>Copyright 2023. 드림요양보호사교육원. All right reserved.</p>
                     </div>
 
                     <div class="col-lg-7 col-sm-9 wow fadeInUp footer-img-set1" data-wow-duration="2s" data-wow-delay=".3s">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="img/footer-img2.png" class="footer-img-set2">
                         </a>
                     </div>
@@ -34,7 +34,7 @@
             <div class="container">
                 <div class="row">
                     <div class="wow fadeInUp footer-img-set1" data-wow-duration="2s" data-wow-delay=".3s">
-                        <a href="index.html">
+                        <a href="/">
                             <img src="img/footer-img2.png" class="footer-img-set2">
                         </a>
                     </div>
