--- a/src/main/resources/templates/layout/fragments/HeadTest.html
+++ b/src/main/resources/templates/layout/fragments/HeadTest.html
@@ -11,7 +11,7 @@
             <div class="col-lg-12 container">
                 <div class="copyright top-banner-box">
                     <p class="copyright-detail-fonts">드림요양보호사교육원이궁금하시다면 온라인 상담신청하세요.</p>
-                    <button class="btn btn-default btn-lg top-popup-btn"><a href="Online-Consulting.html">상담예약하기</a></button>
+                    <button class="btn btn-default btn-lg top-popup-btn"><a href="/onlineconsulting">상담예약하기</a></button>
                     <a href="#" onclick="popup_close();" class="popup-close">
                         <img src="img/popup-close-img.png">
                     </a>
@@ -29,7 +29,7 @@
                     </a>
                 </div>
             </div>
-            <button class="btn btn-default btn-lg top-popup-btn small-popup-btn"><a href="Online-Consulting.html">상담예약하기</a></button>
+            <button class="btn btn-default btn-lg top-popup-btn small-popup-btn"><a href="/onlineconsulting">상담예약하기</a></button>
         </div>
 
         <div class="header-popup popup-small2">
@@ -41,7 +41,7 @@
                     </a>
                 </div>
             </div>
-            <button class="btn btn-default btn-lg top-popup-btn small-popup-btn"><a href="Online-Consulting.html">상담예약하기</a></button>
+            <button class="btn btn-default btn-lg top-popup-btn small-popup-btn"><a href="/onlineconsulting">상담예약하기</a></button>
         </div>
 
 
@@ -131,29 +131,17 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/hover-dropdown.js"></script>
-    <script defer src="js/jquery.flexslider.js"></script>
-    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>
+<!--    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>-->
     <script src="assets/owlcarousel/owl.carousel.js"></script>
-
-
     <script src="js/jquery.easing.min.js"></script>
-    <script src="js/link-hover.js"></script>
-
-
+<!--    <script src="js/link-hover.js"></script>-->
     <!--common script for all pages-->
-    <script src="js/common-scripts.js"></script>
+<!--    <script src="js/common-scripts.js"></script>-->
     <script type="text/javascript" src="js/wow.min.js"></script>
 
 
     <script>
-    $(document).ready(function() {
 
-        $("#owl-demo").owlCarousel({
-            items : 4
-        });
-
-      });
-    new WOW().init();
   </script>
     <script>
       function popup_close(){
