--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,39 +4,32 @@
       layout:decorate="~{layout/layout}">
 
 <th:block layout:fragment="content">
-
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/jquery-1.8.3.min.js"> </script>
-  <script src="js/bootstrap.min.js"> </script>
-  <script type="text/javascript" src="js/hover-dropdown.js"> </script>
-  <script defer src="js/jquery.flexslider.js"></script>
-  <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>
-  <script type="text/javascript" src="js/jquery.parallax-1.1.3.js"></script>
-  <script type="text/javascript" src="js/parallax-slider/modernizr.custom.28468.js" />
-  <script src="js/wow.min.js"></script>
-  <script src="assets/owlcarousel/owl.carousel.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/link-hover.js"></script>
-  <script src="js/superfish.js"></script>
-  <script type="text/javascript" src="js/parallax-slider/jquery.cslider.js"></script>
+  <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/theme.css" rel="stylesheet">
   <link href="css/bootstrap-reset.css" rel="stylesheet">
+
+  <!--external css-->
   <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-  <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.css">
-  <link rel="stylesheet" href="assets/owlcarousel/owl.theme.css">
-  <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/flexslider.css"/>
   <link href="assets/bxslider/jquery.bxslider.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="assets/owlcarousel/owl.carousel.css">
+  <link rel="stylesheet" href="assets/owlcarousel/owl.theme.css">
+
+  <link href="css/superfish.css" rel="stylesheet" media="screen">
+
+  <!-- Custom styles for this template -->
   <link rel="stylesheet" type="text/css" href="css/component.css">
   <link href="css/style.css" rel="stylesheet">
   <link href="css/style-responsive.css" rel="stylesheet" />
-  <link href="css/parallax-slider/parallax-slider.css" rel="stylesheet" type="text/css"  />
+
+  <link rel="stylesheet" type="text/css" href="css/parallax-slider/parallax-slider.css" />
+  <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="js/parallax-slider/modernizr.custom.28468.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/index.css" />
-  <script src="js/wow.min.js"></script>
-  <script src="js/index.js"></script>
   <!-- Sequence Modern Slider -->
   <div id="da-slider" class="da-slider">
 
@@ -629,6 +622,71 @@
     </div>
     <!-- END CLIENTS -->
   </div>
+  <script src="js/jquery-1.8.3.min.js">
+  </script>
+  <script src="js/bootstrap.min.js">
+  </script>
+  <script type="text/javascript" src="js/hover-dropdown.js">
+  </script>
+  <script defer src="js/jquery.flexslider.js">
+  </script>
+  <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">
+  </script>
+  <script src="assets/owlcarousel/owl.carousel.js">
+  </script>
+  <script type="text/javascript" src="js/parallax-slider/jquery.cslider.js">
+  </script>
+
+
+  <script type="text/javascript">
+      $(function() {
+
+        $('#da-slider').cslider({
+          autoplay    : true,
+          bgincrement : 100 ,
+          interval : 8000
+        });
+
+      });
+    </script>
+
+
+  <script type="text/javascript">
+      jQuery(document).ready(function() {
+        $('.bxslider1').bxSlider({
+          minSlides: 5,
+          maxSlides: 6,
+          slideWidth: 360,
+          slideMargin: 2,
+          moveSlides: 1,
+          responsive: true,
+          nextSelector: '#slider-next',
+          prevSelector: '#slider-prev',
+          nextText: 'Next →',
+          prevText: '← Prev'
+        });
+
+      });
+    </script>
+  <script>
+      $('a.info').tooltip();
+
+      $(window).load(function() {
+        $('.flexslider').flexslider({
+          animation: "slide",
+          start: function(slider) {
+            $('body').removeClass('loading');
+          }
+        });
+      });
+
+      $(document).ready(function() {
+        $("#owl-demo").owlCarousel({
+          items : 4
+        });
+
+      });
+    </script>
 
 </th:block>
 </html>
