메뉴바 오류 해결
원인 : <script src="js/bootstrap.min.js"></script>

 레이아웃 중복호출

--- a/src/main/resources/templates/layout/fragments/HeadTest.html
+++ b/src/main/resources/templates/layout/fragments/HeadTest.html
@@ -4,6 +4,17 @@
 <!-- Footer -->
 <th:block th:fragment="HeadFragment">
 
+    <!--header end-->
+    <!-- js placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/hover-dropdown.js"></script>
+    <!--    <script src="js/jquery.easing.min.js"></script>-->
+    <script src="js/link-hover.js"></script>
+    <!--common script for all pages-->
+    <!--    <script src="js/common-scripts.js"></script>-->
+    <script type="text/javascript" src="js/wow.min.js"></script>
+
 
     <!--header start-->
     <header class="head-section">
@@ -126,23 +137,9 @@
             </div>
         </div>
     </header>
-    <!--header end-->
-    <!-- js placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/hover-dropdown.js"></script>
-<!--    <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js"></script>-->
-    <script src="assets/owlcarousel/owl.carousel.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-<!--    <script src="js/link-hover.js"></script>-->
-    <!--common script for all pages-->
-<!--    <script src="js/common-scripts.js"></script>-->
-    <script type="text/javascript" src="js/wow.min.js"></script>
 
 
-    <script>
 
-  </script>
     <script>
       function popup_close(){
         $('.header-popup').css('display','none')
