--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -624,11 +624,9 @@
   </div>
   <script src="js/jquery-1.8.3.min.js">
   </script>
-  <script src="js/bootstrap.min.js">
-  </script>
   <script type="text/javascript" src="js/hover-dropdown.js">
   </script>
-  <script defer src="js/jquery.flexslider.js">
+  <script src="js/jquery.flexslider.js">
   </script>
   <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">
   </script>
