--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,10 +4,7 @@
       layout:decorate="~{layout/layout}">
 
 <th:block layout:fragment="content">
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/theme.css" rel="stylesheet">
-  <link href="css/bootstrap-reset.css" rel="stylesheet">
+
 
   <!--external css-->
   <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -26,10 +23,13 @@
 
   <link rel="stylesheet" type="text/css" href="css/parallax-slider/parallax-slider.css" />
   <link rel="stylesheet" type="text/css" href="css/index.css" />
-  <script src="js/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="js/parallax-slider/modernizr.custom.28468.js"></script>
 
+
+
+
   <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <script src="js/index.js" type="text/javascript">  </script>
   <!-- Sequence Modern Slider -->
   <div id="da-slider" class="da-slider">
 
@@ -50,7 +50,7 @@
               <br />
               <i>Acquisition of a national certificate</i> -->
             </p>
-            <a href="Detail-Academy.html" class="btn btn-info btn-lg da-link">
+            <a href="/detailacademy" class="btn btn-info btn-lg da-link">
               자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
             </a>
             <div class="da-img">
@@ -78,7 +78,7 @@
                 <br />
               <i>visiting care</i> -->
             </p>
-            <a href="Detail-People.html" class="btn btn-info btn-lg da-link">
+            <a href="/detailpeople" class="btn btn-info btn-lg da-link">
               자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
             </a>
             <div class="da-img">
@@ -106,7 +106,7 @@
               <br />
               <i>visiting bath car</i> -->
             </p>
-            <a href="Detail-Bath.html" class="btn btn-info btn-lg da-link">
+            <a href="/detailbath" class="btn btn-info btn-lg da-link">
               자세히 보기&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》
             </a>
             <div class="da-img">
@@ -146,7 +146,9 @@
                 <img src="img/feature-img1.png" alt="드림요양보호사교육원 국가자격증" width="200" height="150">
               </em>
               <h4>
-                <b class="feature-box-b">드림<br/>요양보호사교육원</b>
+                <a href="/detailacademy">
+                  <b class="feature-box-b">드림<br/>요양보호사교육원</b>
+                </a>
               </h4>
             </div>
             <p class="text-center feature-box-p">
@@ -159,7 +161,9 @@
                 <img src="img/feature-img2.png" alt="드림재가 방문요양서비스" width="200" height="150">
               </em>
               <h4>
-                <b class="feature-box-b">드림<br/>재가복지센터</b>
+                <a href="/detailpeople">
+                  <b class="feature-box-b">드림<br/>재가복지센터</b>
+                </a>
               </h4>
             </div>
             <p class="text-center feature-box-p">
@@ -172,7 +176,9 @@
                 <img src="img/feature-img3.png" alt="드림재가 방문목욕서비스" width="200" height="150">
               </em>
               <h4>
-                <b class="feature-box-b">드림<br/>재가복지센터</b>
+                <a href="/detailbath">
+                  <b class="feature-box-b">드림<br/>재가복지센터</b>
+                </a>
               </h4>
             </div>
             <p class="text-center feature-box-p">
@@ -236,7 +242,7 @@
 
           </p>
           <hr>
-          <a href="Online-Consulting.html" class="btn btn-purchase property-btn">
+          <a href="/onlineconsulting" class="btn btn-purchase property-btn">
             상담신청&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp》 <!--Contact랑 연결-->
           </a>
         </div>
@@ -248,14 +254,18 @@
   <div class="container">
 
     <div class="row mar-b-60">
-      <div class="col-lg-6 contact-box" id="">
-        <!--testimonial start-->
-        <h1 id="contact-h1">상담문의</h1>
-        <h3 class="contact-num">Mobile.&nbsp&nbsp&nbsp<a href="javascript:;" >010·2466·9271 </a></h3>
-        <h3 class="contact-num">TEL.&nbsp&nbsp&nbsp<a href="javascript:;" >031·505·0191 </a></h3>
-        <h3 class="contact-email-h3">Email.&nbsp&nbsp&nbsp<a href="javascript:;" class="email-txt2">dreamedu0191@naver.com</a></h3>
-        <!--testimonial end-->
+
+      <div class="col-lg-6">
+        <div class=" contact-box" id="">
+          <!--testimonial start-->
+          <h1 id="contact-h1">상담문의</h1>
+          <h3 class="contact-num">Mobile.&nbsp&nbsp&nbsp<a href="javascript:;" >010·9271·0191 </a></h3>
+          <h3 class="contact-num">TEL.&nbsp&nbsp&nbsp<a href="javascript:;" >031·505·0191 </a></h3>
+          <h3 class="contact-email-h3">Email.&nbsp&nbsp&nbsp<a href="javascript:;" class="email-txt2">dreamedu0191@naver.com</a></h3>
+          <!--testimonial end-->
+        </div>
       </div>
+
       <div class="col-lg-6" >
         <!--tab start-->
         <section class="tab wow fadeInLeft contact-box news-box">
@@ -622,23 +632,15 @@
     </div>
     <!-- END CLIENTS -->
   </div>
-  <script src="js/jquery-1.8.3.min.js">
-  </script>
-  <script type="text/javascript" src="js/hover-dropdown.js">
-  </script>
-  <script src="js/jquery.flexslider.js">
-  </script>
-  <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">
-  </script>
-  <script src="assets/owlcarousel/owl.carousel.js">
-  </script>
-  <script type="text/javascript" src="js/parallax-slider/jquery.cslider.js">
-  </script>
 
-
+  <script src="js/jquery-1.8.3.min.js">  </script>
+  <script type="text/javascript" src="js/hover-dropdown.js"> </script>
+  <script src="js/jquery.flexslider.js"></script>
+  <script type="text/javascript" src="assets/bxslider/jquery.bxslider.js">  </script>
+  <script src="assets/owlcarousel/owl.carousel.js">  </script>
+  <script type="text/javascript" src="js/parallax-slider/jquery.cslider.js">  </script>
   <script type="text/javascript">
       $(function() {
-
         $('#da-slider').cslider({
           autoplay    : true,
           bgincrement : 100 ,
@@ -667,8 +669,6 @@
       });
     </script>
   <script>
-      $('a.info').tooltip();
-
       $(window).load(function() {
         $('.flexslider').flexslider({
           animation: "slide",
@@ -682,6 +682,7 @@
         $("#owl-demo").owlCarousel({
           items : 4
         });
+
 
       });
     </script>
