--- a/src/main/resources/templates/layout/fragments/FooterTest.html
+++ b/src/main/resources/templates/layout/fragments/FooterTest.html
@@ -42,7 +42,7 @@
                     <div class="address wow fadeInUp footer-fonts" data-wow-duration="2s" data-wow-delay=".1s">
                         <p class="footer-set1">이용약관 ㅣ 개인정보처리방침 </p>
                         <p class="footer-set2">경기도 안산시 단원구 고잔로 102, 6층 드림요양보호사교육원</p>
-                        <p class="footer-set2">M. 010·2446·9271 </p>
+                        <p class="footer-set2">M. 010·010·9271·0191 </p>
                         <p class="footer-set2">T. 031·505·0191 </p>
                         <p>E. dreamedu019@naver.com</p>
                         <p>Copyright 2023. 드림요양보호사교육원. All right reserved.</p>
