--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -13,9 +13,17 @@
         드림요양보호사교육원 | Home
     </title>
 
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
+    <link href="css/bootstrap-reset.css" rel="stylesheet">
+
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
 
     <!--    Externel CSS-->
     <link rel="stylesheet" type="text/css" href="css/layout.css" />
+    <script src="js/bootstrap.min.js"></script>
 
 </head>
 
