--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -503,7 +503,7 @@
                 <br/>
               </p>
               <div class="help-more-box">
-                <a href="Detail-Academy.html">
+                <a href="/detailacademy">
                   more&nbsp&nbsp▶
                 </a>
               </div>
@@ -524,7 +524,7 @@
                 <span class="help-subtitle">요양보호사 파견</span> <br/><span class="help-subtitle2">방문 및 돌봄 서비스가 필요하신분</span>
               </p>
               <div class="help-more-box">
-                <a href="Detail-People.html">
+                <a href="/detailpeople">
                   more&nbsp&nbsp▶
                 </a>
               </div>
@@ -545,7 +545,7 @@
                 <span class="help-subtitle">방문목욕 서비스</span><br/> <span class="help-subtitle2">목욕차량 및 요양보호사 방문이 필요하신분</span>
               </p>
               <div class="help-more-box">
-                <a href="Detail-Bath.html">
+                <a href="/detailbath">
                   more&nbsp&nbsp▶
                 </a>
               </div>
